--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "strictlyphp/dolphpin",
+  "version": "1.0.0",
   "type": "library",
   "license": "MIT",
   "autoload": {
@@ -21,7 +22,7 @@
   "require": {
     "php": ">=8.0",
     "slim/psr7": "^1.7",
-    "league/route": "^6.2"
+    "league/route": "^5.1.2"
   },
   "require-dev": {
     "symplify/easy-coding-standard": "^11.1",
