--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "strictlyphp/dolphpin",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "type": "library",
   "license": "MIT",
   "autoload": {
@@ -20,9 +20,14 @@
     }
   ],
   "require": {
-    "php": ">=8.0",
+    "php": ">=8.2",
+    "ext-intl": "*",
+    "ext-bcmath": "*",
+    "ext-simplexml": "*",
+    "ext-curl": "*",
+    "ext-mbstring": "*",
     "slim/psr7": "^1.7",
-    "league/route": "^5.1.2"
+    "league/route": "^6.2"
   },
   "require-dev": {
     "symplify/easy-coding-standard": "^11.1",
