--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,11 @@
 name: Pull Request
 
 on:
-  pull_request:
+  push:
     branches: [ "main", "v1-php8" ]
 
 jobs:
-  test_pull_request:
+  test:
 
     runs-on: ubuntu-latest
 
