--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,4 +26,9 @@ jobs:
         run: make analyze
 
       - name: Run tests
-        run: make check-coverage
+        run: make test-coverage
+
+      - name: Coveralls GitHub Action
+        uses: coverallsapp/github-action@v2.3.6
+        with:
+          file: /tmp/coverage.cov
