--- a/.github/workflows/test-main.yml
+++ b/.github/workflows/test-main.yml
@@ -26,9 +26,4 @@ jobs:
         run: make analyze
 
       - name: Run tests
-        run: make test-coverage
-
-      - name: Coveralls GitHub Action
-        uses: coverallsapp/github-action@v2.3.6
-        with:
-          file: /tmp/coverage.cov
+        run: make coveralls
