--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
     "symplify/easy-coding-standard": "^11.1",
     "phpstan/phpstan": "^1.8",
     "phpunit/phpunit": "^9.5",
-    "phpstan/phpstan-phpunit": "^1.1"
+    "phpstan/phpstan-phpunit": "^1.1",
+    "php-coveralls/php-coveralls": "^2.7"
   }
 }
