--- a/.github/workflows/test-main.yml
+++ b/.github/workflows/test-main.yml
@@ -26,4 +26,7 @@ jobs:
         run: make analyze
 
       - name: Run tests
-        run: make coveralls
+        env: # Or as an environment variable
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        run: make COVERALLS_REPO_TOKEN="$COVERALLS_REPO_TOKEN" coveralls
+
