--- a/.github/workflows/test-main.yml
+++ b/.github/workflows/test-main.yml
@@ -26,9 +26,7 @@ jobs:
         run: make analyze
 
       - name: Run tests
-        run: make test-coverage
+        env: # Or as an environment variable
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        run: make COVERALLS_REPO_TOKEN="$COVERALLS_REPO_TOKEN" coveralls
 
-      - name: Coveralls GitHub Action
-        uses: coverallsapp/github-action@v2.3.6
-        with:
-          file: /tmp/coverage.cov
