add request methid enum

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,6 +2,7 @@ includes:
 	- vendor/phpstan/phpstan-phpunit/extension.neon
 
 parameters:
+	phpVersion: 80000
 	ignoreErrors:
 	    - identifier: missingType.iterableValue
 rules:
