--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -13,11 +13,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Composer Install
-        uses: php-actions/composer@v6
+      - name: Setup PHP 8.0
+        uses: shivammathur/setup-php@v2
         with:
-          php_version: 8.0
-          php_extensions: intl bcmath
+          php-version: '8.0'
+          extensions: intl, bcmath
+
+      - name: Composer Install
+        run: composer install
 
       - name: Check Style
         run: make style
