--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,11 @@
     }
   ],
   "require": {
-    "php": ">=8.0",
+    "php": ">=8.0 <8.1",
     "slim/psr7": "^1.7",
     "psr/http-server-handler": "^1.0",
-    "fig/http-message-util": "^1.1"
+    "fig/http-message-util": "^1.1",
+    "myclabs/php-enum": "^1.8"
   },
   "require-dev": {
     "symplify/easy-coding-standard": "^11.1",
