--- a/composer.json
+++ b/composer.json
@@ -28,14 +28,16 @@
     "ext-mbstring": "*",
     "slim/psr7": "^1.7",
     "psr/http-server-handler": "^1.0",
-    "fig/http-message-util": "^1.1"
+    "fig/http-message-util": "^1.1",
+    "php-di/php-di": "^7.0",
+    "haydenpierce/class-finder": "^0.5.3",
+    "league/route": "^6.2"
   },
   "require-dev": {
     "symplify/easy-coding-standard": "^11.1",
     "phpstan/phpstan": "^1.8",
     "phpunit/phpunit": "^9.5",
     "phpstan/phpstan-phpunit": "^1.1",
-    "php-coveralls/php-coveralls": "^2.7",
-    "league/route": "^6.2"
+    "php-coveralls/php-coveralls": "^2.7"
   }
 }
