--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "fig/http-message-util": "^1.1",
     "php-di/php-di": "^7.0",
     "haydenpierce/class-finder": "^0.5.3",
-    "league/route": "^6.2"
+    "league/route": "^6.2",
+    "monolog/monolog": "^3.9"
   },
   "require-dev": {
     "symplify/easy-coding-standard": "^11.1",
