--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "myclabs/php-enum": "^1.8",
     "league/route": "^5.1",
     "haydenpierce/class-finder": "^0.5.3",
-    "php-di/php-di": "^7.0"
+    "php-di/php-di": "^7.0",
+    "monolog/monolog": "^2.10"
   },
   "require-dev": {
     "symplify/easy-coding-standard": "^11.1",
