--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     "php-di/php-di": "^7.0",
     "haydenpierce/class-finder": "^0.5.3",
     "league/route": "^6.2",
-    "monolog/monolog": "^3.9"
+    "monolog/monolog": "^3.9",
+    "nikic/php-parser": "^4"
   },
   "require-dev": {
     "symplify/easy-coding-standard": "^11.1 || ^12.0",
