--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
     "php-di/php-di": "^7.0",
     "haydenpierce/class-finder": "^0.5.3",
     "league/route": "^6.2",
+    "psr/log": "^2.0 || ^3.0",
     "monolog/monolog": "^3.9",
     "nikic/php-parser": "^5"
   },
